--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,4 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.2",
+    "flask-cors>=6.0.1",
+    "flask-socketio>=5.5.1",
+    "langchain>=1.0.7",
+    "langchain-community>=0.4.1",
+    "langchain-openai>=1.0.3",
+    "langgraph>=1.0.3",
+    "python-dotenv>=1.2.1",
 ]
