--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "numpy>=1.26.0",
     "soundfile>=0.12.1",
+    "playwright>=1.57.0",
+    "pandas>=2.3.3",
 ]
